Correction alignement des documents
L'alignement des icones de PDF était buggé. Les icones s'affichaient en
cascade. J'ai donc appliqué une hauteur minimale, pour qu'elles se
mettent obligatoirement les unes sous les autres.

--- a/plugins/graphisme_auber2.0/_css/style_site.css
+++ b/plugins/graphisme_auber2.0/_css/style_site.css
@@ -238,6 +238,7 @@ padding-left: 40px;
 
 .documentjoints {
 margin-top: 15px;
+min-height: 50px;
 }
 
 .calameo {
